CI images update

--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-25 17:15:35
+lastsearch = 2024-07-25 18:11:57
 
 [demxanh.com]
 match = 13.8%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoqrLwEuUdGk49bah6Rg0v5UtAatW42tb-sn43ZjwG6rrTu94hJd
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
 match = 28.0%%
