--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-25 16:51:06
+lastsearch = 2024-07-25 18:11:15
 
 [dongagroup.vn]
 match = -272.7%%
@@ -87,8 +87,8 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -200.0%%
-title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
+match = -263.6%%
+title = Giường 1m2 x 2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
