--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-25 17:34:06
+lastsearch = 2024-07-25 18:17:17
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -47,9 +47,9 @@ title = Department of the Army Pamphlet - Page 153 - Google Books Result
 url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=luPmzRDXJn&sig=ACfU3U3Ms3ZngnWCuvCoeI0liabNZG-MPg&hl=en&sa=X&ved=2ahUKEwi01JPZnsGHAxU0FFkFHfiFDNMQ6AF6BAgbEAM
 
 [mobilecity.vn]
-match = -185.7%%
-title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
-url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
+match = -207.1%%
+title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
+url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
 match = -242.9%%
