--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-25 16:17:35
+lastsearch = 2024-07-25 18:25:24
 
 [everon.vip]
 match = -10.0%%
@@ -59,7 +59,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 [everon.com.vn]
 match = -114.3%%
 title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/size/160-x-200/
+url = https://everon.com.vn/size/160-x-200/?srsltid=AfmBOoqT7lFWoJzcKgemlSb-RO1IVl6nNgfwCr6C20cyXIqvSB-ZDAZQ
 
 [demxanh.com]
 match = -128.6%%
