--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-25 15:32:33
+lastsearch = 2024-07-25 18:24:44
 
 [www.cms.gov]
 match = 4.5%%
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/Debarment
 
 [appropriations.house.gov]
-match = -109.1%%
-title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
