--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-25 15:57:48
+lastsearch = 2024-07-25 18:22:15
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoqySB77p64e3WSqGRGXBOokP9mpMud0d3lZdJOkit0P9qkpOifT
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-x
 [demxanh.com]
 match = -74.1%%
 title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html?srsltid=AfmBOoqphjAqB4QkAeNUxupZJzhSigAN-V3OgAmO1J1D6ESyXkjCd_J3
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOoos6uHngwe2GY7fjxcaLz34F1tvfeG5KryXFlVAG8svCmPOmkIp
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOorp7rpnDWYPKpu0nVZy-IvaW2x7S1Pp0hfECA80U-txWLGEHjXf
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
