--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-25 17:48:28
+lastsearch = 2024-07-25 18:14:04
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -227.3%%
-title = SG920 Ghế xoay da lãnh đạo có thể nghỉ trưa
-url = https://noithathoaphat.com/ghe-da-van-phong-sg920
+match = -245.5%%
+title = Ghế da trưởng phòng SG718 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg718
 
 [dandoxe.com]
 match = -154.5%%
@@ -180,4 +180,14 @@ url = https://www.tiktok.com/@afandegari/video/7390015025672375558
 match = -136.4%%
 title = ÁO GHẾ DA NAPA XE BT50 2021-2024
 url = https://kyguidopickup.com/san-pham/ao-ghe-da-napa-xe-bt50/
+
+[thamtraisangiadinh.com]
+match = -245.5%%
+title = Thảm Trải Ghế Gỗ | Thảm Ghế Len Cắt Theo Yêu Cầu
+url = https://thamtraisangiadinh.com/tham-trai-ghe-go
+
+[ghedaviet.com]
+match = -227.3%%
+title = Bàn ghế đá tự nhiên GDTN-48 | Ghe da tu nhien
+url = https://ghedaviet.com/ban-ghe-da-tu-nhien-gdtn-48
 
