CI images update

--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+match = -76.2%%
+title = Chăn Mền Phao Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chan-men-phao/
 
 [docauquanghuy.com]
 match = -33.3%%
