--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-25 14:45:00
+lastsearch = 2024-07-25 18:33:25
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -42,14 +42,14 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 4.0%%
-title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+match = -8.0%%
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html?srsltid=AfmBOorJu12G5f3da39kcMQk8AtROBV8tu9iFZ0xhj-xWXPMZxXpnhOj
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOopjtdG_CcuxF8oW09xm6GT5n41ZlFcH50Zs0doBAg42DmeGOseX
 
 [nemcaosuthangloi.vn]
 match = 12.0%%
