--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-25 17:48:38
+lastsearch = 2024-07-25 18:31:59
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -492,8 +492,8 @@ title = Farm Labor
 url = https://www.ers.usda.gov/topics/farm-economy/farm-labor/
 
 [matthewsfuneralhome.com]
-match = -161.5%%
-title = Kyle Frank Mauk | Matthews Funeral Home
+match = 0.0%%
+title = Kyle Frank Mauk
 url = https://matthewsfuneralhome.com/kyle-frank-mauk/
 
 [www.ni.com]
