--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-25 16:50:03
+lastsearch = 2024-07-25 18:25:39
 
 [www.lazada.vn]
 match = -111.1%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -77.8%%
-title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
-url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
+match = -200.0%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
 match = -105.6%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 [www.diepxuan.com]
 match = -55.6%%
 title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html?srsltid=AfmBOoqkqAYIgi0voOaIJlISm-ZA2U1QNGUSoMdTObsNTTRF_QjqE5tO
 
 [nemphuoclong.vn]
 match = -83.3%%
