--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-25 16:51:27
+lastsearch = 2024-07-25 18:26:00
 
 [demxanh.com]
 match = -131.6%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -32,9 +32,9 @@ title = Tấm trang trí nội thất hiện đại bằng thép không gỉ FM8
 url = https://flexhouse.vn/tam-trang-tri-noi-that-hien-dai-bang-thep-khong-gi-fm874
 
 [en.wikipedia.org]
-match = -5.3%%
-title = 1966 in the Vietnam War
-url = https://en.wikipedia.org/wiki/1966_in_the_Vietnam_War
+match = -152.6%%
+title = List of allied military operations of the Vietnam War (1966)
+url = https://en.wikipedia.org/wiki/List_of_allied_military_operations_of_the_Vietnam_War_(1966)
 
 [hoianmemoriesresort.com]
 match = -15.8%%
