--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-25 16:23:04
+lastsearch = 2024-07-25 18:41:42
 
 [www.lazada.vn]
-match = -181.2%%
-title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn ...
+match = -212.5%%
+title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn Định ...
 url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html
 
 [shopee.vn]
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -225.0%%
-title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/track/ave-maria
+match = -81.2%%
+title = בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/album/-
 
 [demxanh.com]
 match = -181.2%%
@@ -177,8 +177,8 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -18.8%%
-title = marc jacobs men wallets
+match = -206.2%%
+title = marc jacobs men wallets - farfetch marc jacobs wallet ...
 url = https://mechanicaldesign-job.com/blogs/kkfggukv-199//
 
 [www.instagram.com]
