CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 16:29:41
+lastsearch = 2024-07-25 18:44:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoouI7AA7BlscMvWX-kuAZ23vQKYRDZJv3wggbau9ABZsZDv80Fd
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOopGSC0tFYg56oUdFWVM03MVSt6cRJytYcvSWNfRDLk3Y4ARKyPq
 
 [tiki.vn]
 match = -42.9%%
@@ -314,7 +314,7 @@ url = https://congly.vn/cong-an-tp-hcm-khai-giang-lop-huan-luyen-phong-chong-duo
 [www.mykingdom.com.vn]
 match = -14.3%%
 title = MYKINGDOM - VƯƠNG QUỐC ĐỒ CHƠI
-url = https://www.mykingdom.com.vn/
+url = https://www.mykingdom.com.vn/?srsltid=AfmBOopqdEjCiIRr9K0gpUNwxAvmZP5OqbKELkSYP_EyuJEACbsj-34a
 
 [www.ihg.com]
 match = -104.8%%
@@ -615,4 +615,9 @@ url = https://www.rfi.fr/vi/tổng-hợp/20240722-copenpay-đan-mạch-tặng-th
 match = -38.1%%
 title = Cầu Chạy Dâm - Sex Karaoke Nam Việt
 url = https://biogreen-impexp.fr/5698170-chạy-cầu-dâm.html
+
+[baocaovien.vn]
+match = -138.1%%
+title = Thái Bình: Cháy xưởng sản xuất bật lửa gas, 12 công nhân ...
+url = https://baocaovien.vn/tin-tuc/thai-binh-chay-xuong-san-xuat-bat-lua-gas-12-cong-nhan-nhap-vien-cap-cuu/144249.html
 
