--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-25 14:21:24
+lastsearch = 2024-07-25 19:27:38
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = 0.0%%
+title = Coco Chan - Hoi Lai Kok
+url = https://hk.linkedin.com/in/coco-chan-935486254
 
 [www.instagram.com]
 match = -230.8%%
@@ -195,4 +195,9 @@ url = https://www.vntg.com/designer/kwok-hoi-chan/
 match = -146.2%%
 title = Next Up: Coco Chan and Valerie Ho of OMSA
 url = https://theloophk.com/next-up-coco-chan-and-valerie-ho-of-omsa/
+
+[glamgo.s3.uk.io.cloud.ovh.net]
+match = 0.0%%
+title = 
+url = https://glamgo.s3.uk.io.cloud.ovh.net/coco-lee-net-worth-2023-how-rich-is-she-now.html
 
