--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-25 16:30:42
+lastsearch = 2024-07-25 19:32:54
 
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOoqVhkaWnSjHsUT5d0Vg1XnpzCid9cePqDu1OTvETiqwLMc66FDQ
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [www.htlight.vn]
 match = -26.7%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [daros.com.vn]
 match = -40.0%%
@@ -42,9 +42,9 @@ title = Cột thép tròn côn TC- 78 cần đôi HT15
 url = https://helaco.group/cot-thep-tron-con-tc-78-can-doi-ht15
 
 [www.facebook.com]
-match = -180.0%%
-title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
-url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
+match = -186.7%%
+title = Cộng đồng cư dân Bát Tràng | Chiếu tăm cây H&T khẳng ...
+url = https://www.facebook.com/groups/664918127312487/posts/chiếu-tăm-cây-ht-khẳng-định-thương-hiệu-trên-thị-trường-freeshiplh-0963-658-905-/1872701319867489/
 
 [www.htv.com.vn]
 match = -106.7%%
