--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-25 15:45:05
+lastsearch = 2024-07-25 19:39:52
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
