CI images update

--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-25 18:14:04
+lastsearch = 2024-07-25 19:57:15
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -245.5%%
-title = Ghế da trưởng phòng SG718 - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg718
+match = -227.3%%
+title = SG920 Ghế xoay da lãnh đạo có thể nghỉ trưa
+url = https://noithathoaphat.com/ghe-da-van-phong-sg920
 
 [dandoxe.com]
 match = -154.5%%
