--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-25 17:28:21
+lastsearch = 2024-07-25 20:14:16
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia
 [vinatools.com]
 match = -173.3%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong ...
-url = https://vinatools.com/keo-cat-ton-d208/
+url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOoqNOXY54Nuv31ppYPJYuzWq1NJDJ9HpWIZXo2e6QmSjmsJvgbRV
 
 [shopvnb.com]
 match = -166.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -53.3%%
-title = Black Kingdom - D2 - Facebook
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -133.3%%
+title = Sân nhà cung các hoạt động khác diễn ra tại
+url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
 
 [lacvietauction.vn]
 match = -80.0%%
