--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 19:36:42
+lastsearch = 2024-07-25 20:10:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOop11VKdYk_3XKt0rF9gI38toB_2fG9ypLnCuHcmFs-XjB88EQJY
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooSm145HUVTynSeo3iXMOFXSYp2zpj3NCb00Kg2JUSwtCCcNPuY
 
 [tiki.vn]
 match = -42.9%%
@@ -314,7 +314,7 @@ url = https://congly.vn/cong-an-tp-hcm-khai-giang-lop-huan-luyen-phong-chong-duo
 [www.mykingdom.com.vn]
 match = -14.3%%
 title = MYKINGDOM - VƯƠNG QUỐC ĐỒ CHƠI
-url = https://www.mykingdom.com.vn/
+url = https://www.mykingdom.com.vn/?srsltid=AfmBOoop7LunwIdAR8SiIxmBxG72Mx7bko3CmSMWA7iDWhRRICqro75G
 
 [www.ihg.com]
 match = -104.8%%
