--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-25 19:32:33
+lastsearch = 2024-07-25 20:06:59
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -128.6%%
+title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
+url = https://everonvn.com.vn/everon/615/bo-everon-es1816
 
 [www.everonqb.com]
 match = -66.7%%
