--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-25 17:45:51
+lastsearch = 2024-07-25 20:12:33
 
 [www.youtube.com]
 match = -390.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -350.0%%
-title = When is Ren/[REDACTED] birthday? – @14dayswithyou ...
-url = https://www.tumblr.com/14dayswithyou/693943503681732608/when-is-renredacted-birthday
+match = -70.0%%
+title = ren 14 days with you
+url = https://www.tumblr.com/tagged/ren 14 days with you
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -67,9 +67,9 @@ title = Episode 52 | Kingdom Wiki | Fandom
 url = https://kingdom.fandom.com/wiki/Episode_52
 
 [www.amazon.com]
-match = -480.0%%
-title = iPhone 14 Renaissance Festival Ren Fair Faire Medieval Man of ...
-url = https://www.amazon.com/Renaissance-Festival-Man-My-Sword/dp/B0CJFS49FK
+match = -450.0%%
+title = iPhone 14 Pro Renaissance Fair Festival Ren Faire Medieval ...
+url = https://www.amazon.com/Renaissance-Festival-Man-My-Sword/dp/B0CJGPTC59
 
 [www.bible.com]
 match = -30.0%%
