--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-25 13:23:17
+lastsearch = 2024-07-25 20:10:47
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -100.0%%
-title = [MẪU VÀ GIÁ] 70+ BỘ BÀN GHẾ ĐÁ NGOÀI TRỜI
-url = https://ghedagiago.com/danh-muc/ban-ghe-da-ngoai-troi/
+match = -146.7%%
+title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
+url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -133.3%%
-title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
-url = https://ghedamienbac.com/ban-ghe-da/
+match = -120.0%%
+title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
+url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [bangheda.info]
 match = -140.0%%
@@ -92,8 +92,8 @@ title = Tiết Lộ 99+ Mẫu Ghế Sofa Da Cao Cấp Hot Nhất Năm 2024
 url = https://luxcasa.vn/ghe-sofa-da/
 
 [ghedasaigon.com]
-match = -160.0%%
-title = Giá ghế đá – Giá xưởng sản xuất cập nhật mới nhất
+match = -173.3%%
+title = GIÁ GHẾ ĐÁ | GIÁ XƯỞNG SẢN XUẤT [GIAO HÀNG TẬN NƠI]
 url = https://ghedasaigon.com/gia-bo-ban-ghe-da/
 
 [ghedagiaxuong.vn]
