--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-25 15:48:36
+lastsearch = 2024-07-25 20:32:42
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoqAlIFHVFWEntSUviaqV_w1vNpwDXpsXXIAzu3uzymFm2KqE8Px
 
 [tiki.vn]
 match = -36.4%%
@@ -17,14 +17,14 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/?srsltid=AfmBOoptI7-PQtniqqKYoy_n8wZJGEbKVvKZ9zi_DknOenCKnC0owo7u
 
 [flexhouse.vn]
-match = -9.1%%
-title = Thảm trải sàn chính hãng, giá tốt
-url = https://flexhouse.vn/tham-lot-san
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
 match = -45.5%%
@@ -49,7 +49,7 @@ url = https://blanc.vn/tham-trai-san
 [demxanh.com]
 match = -27.3%%
 title = Giường sắt Duy Phương cao cấp bọc da
-url = https://demxanh.com/giuong-sat-duy-phuong-cao-cap-boc-da.html
+url = https://demxanh.com/giuong-sat-duy-phuong-cao-cap-boc-da.html?srsltid=AfmBOoqn4oxCJsCYQn8sbi1AH3CccuvnrZClFIvB6cRnn5mI2ij9tmDQ
 
 [www.kymdan.com]
 match = -18.2%%
