--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-25 16:46:04
+lastsearch = 2024-07-25 20:34:27
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZFlL3y&sig=ACfU3U1E09h5qEpw1eZeaX01bo5VhSf5EQ&hl=en&sa=X&ved=2ahUKEwiW3qKC9cGHAxUL48kDHV0-BpsQ6AF6BAggEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUZGpG1G&sig=ACfU3U1VaCN-Mk1bzULFtLoDGRza7yoA2Q&hl=en&sa=X&ved=2ahUKEwje48Chp8KHAxUgl4kEHVmgANkQ6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -61.5%%
 title = Cách giặt ruột gối Everon bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOopGOtLzZREG0YG2it0aj2puxhsJoqNcaruby5WdMDPhJFCshIaX
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
 
 [www.youtube.com]
 match = -69.2%%
