--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-25 19:57:36
+lastsearch = 2024-07-25 20:24:18
 
 [www.facebook.com]
 match = -182.4%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = 0.0%%
-title = Hans Lee, MD
-url = https://faculty.mdanderson.org/profiles/hans_lee.html
+match = -17.6%%
+title = Philip L. Lorenzi, Ph.D.
+url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
