--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-25 15:47:37
+lastsearch = 2024-07-25 20:26:06
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -109.5%%
-title = Tin mới nhất siêu bão Gaemi quét qua Đài Loan (Trung Quốc ...
-url = https://www.youtube.com/watch?v=xRd2vjgzuB4
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=-5kfc6oUOmU
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOophi3o6iaX5G7CJh3Nwxdabp2A3lKOq4WV-NkX8LIuDewwcVzWm
 
 [znews.vn]
 match = -104.8%%
