--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-25 18:14:26
+lastsearch = 2024-07-25 20:30:57
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -212.5%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+10&source=bl&ots=LZu6XUdxRo&sig=ACfU3U0FIEba8h_ZN-lu17nYqr9sEvMJ3Q&hl=en&sa=X&ved=2ahUKEwjSuqSi1b2HAxUZMlkFHWHKAy4Q6AF6BAgiEAM
+match = -218.8%%
+title = Truyen ngan - Yeu tren tung ngon tay - Google Books Result
+url = https://books.google.com/books?id=WPbxCwAAQBAJ&pg=PT11&lpg=PT11&dq=chieu+lac+soc+10&source=bl&ots=dCOAPJ8YXr&sig=ACfU3U1zyc4bf-UPqemCKRoOz3SmOk80og&hl=en&sa=X&ved=2ahUKEwi71qy9psKHAxXyrokEHezMBIkQ6AF6BAgjEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
