--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-25 14:32:48
+lastsearch = 2024-07-25 20:28:31
 
 [demxanh.com]
 match = -42.9%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -25.0%%
-title = Nachthelle movie watch online - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1ac5aidf.xn--p1ai/42316975nhntqxre7dc9v1cfdv4fe36a
+match = -10.7%%
+title = Derek diedricksen cabin - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aktidr.xn--p1ai/5386294753misclinicv4fe36a
 
 [news.google.it]
 match = -3.6%%
