--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-25 15:50:19
+lastsearch = 2024-07-25 20:27:49
 
 [www.linkedin.com]
 match = -145.5%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -145.5%%
-title = 2024 Mt. Tam Trail Run | Mill Valley
-url = https://www.runguides.com/event/4688/mt-tam-trail-run
+match = -336.4%%
+title = San Francisco Bay Area Running Race Calendar - 2024/25
+url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
 match = -125.0%%
@@ -109,7 +109,7 @@ url = https://www.sesostrisshrine.org/pages/uploaded_files/15_JF.pdf
 [kstoolsvietnam.vn]
 match = -327.3%%
 title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
-url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html?srsltid=AfmBOoq2haDKPYC4RxonQbWyKL20paaRf_ZlXvNq19vfEBXKZ3bWWx9B
+url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
 
 [sagatexvietnam.com.vn]
 match = -345.5%%
