CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-25 09:49:52
+lastsearch = 2024-07-25 20:45:20
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,14 +62,14 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -162.5%%
+title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
+url = https://www.youtube.com/watch?v=LXqHpPenE6A
 
 [books.google.com]
 match = -81.2%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -106.2%%
-title = HR - TUYỂN DỤNG | 𝓣𝓻𝓪̀ 𝓢𝓾̛̃𝓪 𝑵𝑶̣𝑵𝑮 𝓒𝓪̂̀𝓷 𝓑𝓸̂̉ ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8343526272338013/
+match = -112.5%%
+title = Menu chiều Cô ship Cổng Rào KTX B và khu ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2398332297213902/
 
 [thanhnien.vn]
 match = -187.5%%
