--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-25 20:00:24
+lastsearch = 2024-07-25 20:36:39
 
 [www.tiktok.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopmyuL9AkaLjtw3ICItY_9iHK4praIfs1nkRLP2XIhkjTI3drWe
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
@@ -212,8 +212,8 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -200.0%%
-title = new rolex yachtmaster - rolex yacht master price new ...
+match = -175.0%%
+title = new rolex yachtmaster - rolex yacht master price new
 url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
@@ -235,4 +235,9 @@ url = https://upload.wikimedia.org/wikipedia/commons/d/d8/Poems_and_Ballads_(IA_
 match = -193.8%%
 title = 16' Above Ground Swimming Pool Solar Sun Dome Cover ...
 url = https://www.amazon.com/Ground-Swimming-Heater-Sundome-Panels/dp/B001WK6PCY
+
+[m.shein.com.vn]
+match = 20.0%%
+title = warm dream
+url = https://m.shein.com.vn/store/home?store_code=4482925045&type=selection&routeId=102828784
 
