--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-25 11:53:49
+lastsearch = 2024-07-25 20:38:39
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = 0.0%%
+title = 
+url = https://www.muji.com/ae/feature/whatismuji/
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = -135.7%%
-title = CHĂN LÔNG TUYẾT MUJI XUẤT NHẬT SIÊU MỀM MỊN ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-MUJI-XUẤT-NHẬT-SIÊU-MỀM-MỊN-KÍCH-THƯỚC-2M*2M3-i.207051295.4759765140
+match = 28.6%%
+title = Chăn Lông Nhung Xám MUJI
+url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
 
 [changagoidemdep.vn]
 match = 35.7%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOoq5i3ji9TKHm9FKzcxgBezskce1mgkg80omOwJ5LTcT0zrbzxmm
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOops12-SpUQLEmLnbux8JqhlrDz60tii0f-fu2QXv9NnjYQ34k-m
 
 [sugoimart.com]
 match = -257.1%%
