--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-25 18:22:37
+lastsearch = 2024-07-25 20:35:16
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,24 +12,24 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -60.9%%
-title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+match = 30.4%%
+title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
+url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html?srsltid=AfmBOor4uBaZtOomEJjq9v326lb3JJws1HvQGxrP344fz62tYn94qr7I
 
 [chieutrucsaigon.com]
-match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -43.5%%
+title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
+url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
 
 [www.lazada.vn]
 match = 21.7%%
 title = Chiếu cao bằng Việt Nam 1.2 X 1.95
-url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2
+url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2&srsltid=AfmBOoqG3rPVVeQHu3_AfuaEeZ1TGwC55lF8vys53oG0A3cxHaK9pWlL
 
 [chieu.com.vn]
 match = -4.3%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOoojWBVYqbxLhmj55e8gFl3Ddnt7UtIeGO5worE0p8fRmywXIopX
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
