--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-06 17:06:44
 lastsearch = 2024-07-25 20:23:36
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
