--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-25 20:09:25
+lastsearch = 2024-07-25 20:34:17
 
 [en.wikipedia.org]
-match = -10.0%%
-title = Donghak Peasant Revolution
-url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -20.0%%
-title = Colombians Riot Hard Rock Cafe
-url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
+match = -60.0%%
+title = Guys Get Their Haircut Off and Kiss Video
+url = https://www.tiktok.com/discover/guys-get-their-haircut-off-and-kiss-video
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -42,9 +42,9 @@ title = Ethereum Tokens
 url = https://cryptoslate.com/blockchain/ethereum/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -90.0%%
+title = BITCOIN PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/btc-to-usd-forecast-today-dollar-to-bitcoin
 
 [www.akc.org]
 match = -45.0%%
