--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-07-25 17:42:24
+lastsearch = 2024-07-25 20:42:30
 
 [www.khanbongcaocap.com.vn]
 match = -78.9%%
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -94.7%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOor3fLD-TcvskTOmKdvZ6opnbl6_CEZMgmf2or1yqL7HtQPN9AlZ
 
 [falcon.com.vn]
 match = -105.3%%
