--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-25 19:57:15
+lastsearch = 2024-07-25 20:37:17
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
 match = -209.1%%
@@ -28,8 +28,8 @@ url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -227.3%%
-title = SG920 Ghế xoay da lãnh đạo có thể nghỉ trưa
-url = https://noithathoaphat.com/ghe-da-van-phong-sg920
+title = Ghế da chân quỳ TFMQD56 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-chan-quy-tfmqd56
 
 [dandoxe.com]
 match = -154.5%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = -318.2%%
-title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
-url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
+match = 18.2%%
+title = Bọc ghế da ô tô
+url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
 
 [github.com]
 match = -81.8%%
