--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -106.2%%
+title = Một Bí thư huyện ở Lâm Đồng xin nghỉ việc
+url = https://baomoi.com/mot-bi-thu-huyen-o-lam-dong-xin-nghi-viec-c49730070.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -283,8 +283,8 @@ url = https://tuoitre.vn/ngo-het-thoi-ai-de-chieu-viet-xuat-ngoai-am-ve-trieu-do
 
 [xaydungchinhsach.chinhphu.vn]
 match = -206.2%%
-title = Tân sinh viên cảnh giác những chiêu trò lừa đảo dễ gặp phải
-url = https://xaydungchinhsach.chinhphu.vn/tan-sinh-vien-canh-giac-nhung-chieu-tro-lua-dao-de-gap-phai-119240724151357032.htm
+title = TUYÊN ÁN 2 cựu Phó Chủ tịch huyện, Phó Chánh Văn phòng ...
+url = https://xaydungchinhsach.chinhphu.vn/tuyen-an-cuu-pho-chu-tich-huyen-pho-chanh-van-phong-chu-tich-xa-cung-mot-loat-can-bo-cong-chuc-119240725180937714.htm
 
 [canbangdongclc.com]
 match = -68.8%%
@@ -307,9 +307,9 @@ title = Đội tuyển U16 Việt Nam họp rút kinh nghiệm trước trận .
 url = https://daidoanket.vn/doi-tuyen-u16-viet-nam-hop-rut-kinh-nghiem-truoc-tran-gap-u16-myanmar-10284214.html
 
 [laodong.vn]
-match = -162.5%%
-title = Phó Bí thư Châu Thành làm Phó Giám đốc Sở Văn hóa ...
-url = https://laodong.vn/thoi-su/pho-bi-thu-chau-thanh-lam-pho-giam-doc-so-van-hoa-the-thao-va-du-lich-soc-trang-1363402.ldo
+match = -193.8%%
+title = Vì sao Pháp là thị trường chuyển nhượng ưa thích của ...
+url = https://laodong.vn/bong-da-quoc-te/vi-sao-phap-la-thi-truong-chuyen-nhuong-ua-thich-cua-premier-league-1370702.ldo
 
 [baolamdong.vn]
 match = -243.8%%
@@ -387,9 +387,9 @@ title = 16h hôm nay 16-7, m ở cửa xả đáy thứ hai hồ thủy điện 
 url = https://hanoimoi.vn/16h-hom-nay-16-7-m-o-cua-xa-day-thu-hai-ho-thuy-dien-hoa-binh-672188.html
 
 [caobangtv.vn]
-match = -193.8%%
-title = Trưởng Ban Tuyên giáo Tỉnh ủy Bế Thanh Tịnh dự Hội ...
-url = http://caobangtv.vn/tin-tuc-n74609/truong-ban-tuyen-giao-tinh-uy-be-thanh-tinh-du-hoi-nghi-ban-chap-hanh-dang-bo-huyen-bao-lac-lan-thu-19.html
+match = -168.8%%
+title = Huyện Bảo Lạc thăm, tặng quà các gia đình chính sách
+url = http://caobangtv.vn/tin-tuc-n75459/huyen-bao-lac-tham-tang-qua-cac-gia-dinh-chinh-sach.html
 
 [bxmt.com.vn]
 match = -156.2%%
@@ -575,4 +575,14 @@ url = https://danviet.vn/hoi-chuong-bao-dong-cho-bong-da-viet-nam-20240723085605
 match = 0.0%%
 title = 
 url = https://fado.vn/blog/co-tay-16cm-deo-vong-size-bao-nhieu.n90035/
+
+[littlesaigontv.com]
+match = -212.5%%
+title = Cô gái 15 tuổi mất tích ở Monterey Park được tìm thấy an ...
+url = https://littlesaigontv.com/co-gai-15-tuoi-mat-tich-o-monterey-park-duoc-tim-thay-an-toan/
+
+[vnvc.vn]
+match = -212.5%%
+title = 6 địa điểm tiêm HPV ở Đà Nẵng uy tín: Giá tiền và cách ...
+url = https://vnvc.vn/dia-diem-tiem-hpv-o-da-nang/
 
