--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-07 00:36:02
 lastsearch = 2024-07-25 20:42:52
 
 [shopee.vn]
-match = -87.5%%
-title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
-url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
+match = -75.0%%
+title = Thảm lau chân chùi chân chống trượt thấm nước nhà bếp ...
+url = https://shopee.vn/Thảm-lau-chân-chùi-chân-chống-trượt-thấm-nước-nhà-bếp-nhà-tắm-phòng-khách-giẻ-lau-chân-đế-chống-trượt-i.149656288.21351545391
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -33.3%%
-title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html
+match = -62.5%%
+title = Thảm chân logo hình bàn chân, Thảm chùi chân lông xù ...
+url = https://www.lazada.vn/products/tham-chan-logo-hinh-ban-chan-tham-chui-chan-long-xu-cao-cap-tham-lau-chan-sieu-tham-nuoc-tham-chui-chan-chong-tron-truot-trang-tri-nha-cua-phong-ngu-phong-khach-kich-thuoc-40x60-cm-i1788111707.html?srsltid=AfmBOop9YJx7Mv_pYDqj4b-poveezqIIiotahtKhzFlwAu85cCWgWmLt
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -29.2%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
+match = -62.5%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
@@ -97,14 +97,14 @@ title = Thảm tròn BathRoom 40x60 (Nhung)
 url = https://dathangsi.vn/10497-tha-m-tro-n-bathroom-40x60-nhung-.html
 
 [www.sendo.vn]
-match = 4.2%%
-title = Thảm lau chân siêu thấm chống trượt kẻ 40x60
-url = https://www.sendo.vn/tham-lau-chan-sieu-tham-chong-truot-ke-40x60-100263311.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721433600417_undefined_-1_cateLvl2_0_7_23_-1
+match = -41.7%%
+title = Thảm Chùi Chân Welcome Chính Hãng, Xu Hướng Mới Nhất
+url = https://www.sendo.vn/tham-chui-chan-welcome.htm
 
 [www.facebook.com]
-match = 12.5%%
-title = Thảm Cao Cấp - Hello Home | Hanoi
-url = https://www.facebook.com/thamcaocaphellohome/?locale=pt_PT
+match = -100.0%%
+title = Chợ Cư Dân Conic Riverside | Viên kim cương thiên nhiên ...
+url = https://www.facebook.com/groups/768233467073113/posts/viên-kim-cương-thiên-nhiên-hình-vuông-thường-tạo-ra-hiệu-ứng-quang-học-đẹp-mắt-k/1621875391708912/
 
 [m.facebook.com]
 match = -66.7%%
