--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-25 18:48:29
+lastsearch = 2024-07-25 20:56:24
 
 [everon.online]
 match = -32.4%%
@@ -13,8 +13,8 @@ url = https://everon.online/blogs/video/4
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-24016 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm24016.html
+title = Everon EST-24035 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
 
 [nem.vn]
 match = 5.9%%
