--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-25 17:46:41
+lastsearch = 2024-07-25 20:50:44
 
 [www.youtube.com]
-match = -121.1%%
-title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
-url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -53,8 +53,8 @@ url = https://baothanhhoa.vn/bao-tu-manh-nhat-trong-hai-thap-ky-gay-anh-huong-to
 
 [shophoavungtau.com]
 match = -89.5%%
-title = Cách trồng hoa cẩm tú cầu với các bước đơn giản
-url = https://shophoavungtau.com/cach-trong-hoa-cam-tu-cau
+title = Ý nghĩa hoa mộc lan: Vẻ đẹp của sự thuần khiết
+url = https://shophoavungtau.com/y-nghia-hoa-moc-lan
 
 [tiin.vn]
 match = -147.4%%
@@ -72,8 +72,8 @@ title = Cây hoa Mộc Hương
 url = https://qkhgarden.com/products/cay-hoa-moc-huong
 
 [guitanghoa.com]
-match = -157.9%%
-title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của chúng
+match = -147.4%%
+title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của ...
 url = https://guitanghoa.com/hoa-dep/cay-hoa-moc-lan/
 
 [vi.wikipedia.org]
@@ -295,4 +295,19 @@ url = https://fuhuq.net/en
 match = -121.1%%
 title = Bộ Y tế xác định mã số hàng hóa 14 danh mục thuốc ...
 url = https://suckhoedoisong.vn/bo-y-te-xac-dinh-ma-so-hang-hoa-14-danh-muc-thuoc-nguyen-lieu-lam-thuoc-va-my-pham-169240725143703004.htm
+
+[thegioihoa.net]
+match = -89.5%%
+title = Hoa chiều tím và những ý nghĩa sâu sắc của chúng
+url = https://thegioihoa.net/post/hoa-chieu-tim-va-nhung-y-nghia-sau-sac-cua-chung/IWZ9ZIZC.html
+
+[nhavuonkhanhvo.com]
+match = -115.8%%
+title = Cây Hoa Trà My Cổ 7 Năm Tuổi Đang Hoa Cao 1,2m - 1,5m
+url = https://nhavuonkhanhvo.com/products/cay-hoa-tra-my-co-7-nam-tuoi-dang-hoa-cao-1-2m-1-5m
+
+[ttkhcn.baria-vungtau.gov.vn]
+match = -68.4%%
+title = Hoa sen cạn có kỹ thuật trồng cây không khó
+url = http://ttkhcn.baria-vungtau.gov.vn/tttv/Question/DetailQuestion/334?page=16
 
