--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-25 20:28:52
+lastsearch = 2024-07-25 20:52:30
 
 [www.diepxuan.com]
 match = 42.9%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [shopee.vn]
-match = -7.1%%
-title = Chiếu nhựa 🍀𝑭𝑹𝑬𝑬 𝑺𝑯𝑰𝑷🍀Chiếu nhựa loại đẹp Hà Nội ...
-url = https://shopee.vn/Chiếu-nhựa-🍀𝑭𝑹𝑬𝑬-𝑺𝑯𝑰𝑷🍀Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-i.533272024.25669597976
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+title = Chiếu Nhựa Hà Nội (1,5m , 1,6m , 1m8 x 2m ,1m8x3m , ...
+url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m-p131589762.html?spid=198258706
 
 [www.yellowpages.vn]
 match = 0.0%%
