--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-25 20:34:50
+lastsearch = 2024-07-25 20:45:33
 
 [chieutrucsaigon.com]
-match = 16.7%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+match = 33.3%%
+title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
 
 [demxanh.com]
-match = -8.3%%
-title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+match = 25.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -27,14 +27,14 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 25.0%%
-title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [shopee.vn]
-match = 50.0%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -37.5%%
+title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
+url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -120,4 +120,14 @@ url = https://lombom.com/chieu-huong-truc/
 match = -83.3%%
 title = Loại chiếu trúc nào tốt nhất trên thị trường? - ĐỆM SÔNG HỒNG
 url = https://demsonghonghanoi.com/loai-chieu-truc-nao-tot-nhat-tren-thi-truong/
+
+[xaydungchinhsach.chinhphu.vn]
+match = -91.7%%
+title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng ...
+url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
+
+[thuvienphapluat.vn]
+match = -100.0%%
+title = Người lao động đại diện 1 nhóm người giao kết hợp đồng ...
+url = https://thuvienphapluat.vn/lao-dong-tien-luong/nguoi-lao-dong-dai-dien-1-nhom-nguoi-giao-ket-hop-dong-lao-dong-trong-truong-hop-nao-27204.html
 
