--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-25 14:53:21
+lastsearch = 2024-07-25 20:51:50
 
 [screenrant.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = Blue Bayou (2021)
 url = https://www.imdb.com/title/tt11121664/
 
 [www.boundless.com]
-match = -128.6%%
-title = Green Cards - Timeline, Costs, and Types
-url = https://www.boundless.com/immigration-resources/the-green-card-explained/
+match = 0.0%%
+title = 
+url = https://www.boundless.com/immigration-resources/form-n-400-explained/
 
 [books.google.com]
 match = -285.7%%
@@ -357,8 +357,8 @@ title = Blue Bottle Coffee | Fresh Roasted Specialty Coffee
 url = https://bluebottlecoffee.com/
 
 [environment.ec.europa.eu]
-match = -242.9%%
-title = European Green Capital Award - Environment.ec.europa.eu.
+match = -142.9%%
+title = European Green Capital Award - Environment
 url = https://environment.ec.europa.eu/topics/urban-environment/european-green-capital-award_en
 
 [www.cyberlink.com]
