--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -13,8 +13,8 @@ url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
 match = -141.2%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 31
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-31-p38118824.html?spid=56906252
 
 [www.lazada.vn]
 match = -135.3%%
@@ -22,9 +22,9 @@ title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
 url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -152.9%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
 match = -105.9%%
