--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-25 20:22:56
+lastsearch = 2024-07-25 20:57:07
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Dvorak Genshin Bpc
-url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
+match = -25.0%%
+title = Simple Xiangling Build
+url = https://www.tiktok.com/discover/simple-xiangling-build
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -143.8%%
-title = Tiếp tục những cung đường... #thixagiarai ...
-url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
+match = -68.8%%
+title = Siaran Chăn ga gối đệm Điệp Xuân
+url = https://www.facebook.com/diepxuanco/posts/4840270546027657/?locale=ms_MY
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
@@ -69,7 +69,7 @@ url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 [demxanh.com]
 match = -162.5%%
 title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html?srsltid=AfmBOoqXUk0Cv-yRqkgu1Jom4mYRhH4NRo_L-7CvwHf-RaXvikuDOcEs
 
 [olm.vn]
 match = -243.8%%
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -125.0%%
-title = Search Results for Children Chinese Fiction
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.bottomtoolbar.pagination.selectpage:handlepagingviasearchsession/1?qu=Children+Chinese+Fiction&ic=true&ps=300
+match = -137.5%%
+title = Search Results for Children Fiction, Chineses
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.resultstoolbar.pagination.selectpage:handlepagingviasearchsession/1?qu=Children+Fiction,+Chineses&pe=r:1&ps=300
 
 [www.lemon8-app.com]
 match = -118.8%%
