CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -247,9 +247,9 @@ title = Live preview for Website
 url = https://www.designblog.de/responsive/?site=xn--h1adbbiehr8e1a2d.xn--p1ai/Ts1Z4ONfe43v
 
 [www.museum.ru]
-match = -107.7%%
-title = Lydia nyyd Goda letkauskaite Feu barroca highlights Brian sams ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--b1ac5aidf.xn--p1ai/nvTOHGafe
+match = -130.8%%
+title = Uppercase first character excel Tsentralny dom literatorov Pierre ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--b1afzj3b4c.xn--p1ai/kMcEI9afe
 
 [weeklyrentals.com]
 match = -7.7%%
