--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-25 20:32:31
+lastsearch = 2024-07-25 21:45:10
 
 [www.tiktok.com]
 match = -35.3%%
@@ -540,4 +540,9 @@ url = https://praktijk-talent.nl/tycq/nevada-hoa-fraud
 match = -188.2%%
 title = WHEN CHRISTINE purchased her van and 20 acres of land in ...
 url = https://kuschkedental.co.za/78878773-anh-gai-xinh-khoe-lon.html
+
+[www.boredpanda.com]
+match = -152.9%%
+title = Person Maliciously Complies With HOA Rules, Ends Up ...
+url = https://www.boredpanda.com/homeowners-association-camera-removal-malicious-compliance/
 
