--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-25 17:40:23
+lastsearch = 2024-07-25 21:54:09
 
 [dreamland.vn]
 match = -32.0%%
@@ -14,7 +14,7 @@ url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 [demxanh.com]
 match = -24.0%%
 title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
-url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html?srsltid=AfmBOoptR3sWScbn7agvJ-XpuFg-oibqD5aeBwM_ywDfpGlt98JDkWUQ
+url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
 
 [www.diepxuan.com]
 match = 48.0%%
