CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-25 20:26:06
+lastsearch = 2024-07-25 22:18:25
 
 [tiki.vn]
 match = -47.6%%
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html?srsltid=AfmBOophi3o6iaX5G7CJh3Nwxdabp2A3lKOq4WV-NkX8LIuDewwcVzWm
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [znews.vn]
 match = -104.8%%
