--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-25 16:24:07
+lastsearch = 2024-07-25 22:19:47
 
 [www.mantubung.com]
-match = -105.6%%
-title = Mùng em bé chống muỗi đa năng cho trẻ em - Mùng Chụp
-url = https://www.mantubung.com/mung-em-be.html
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -61.1%%
-title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn tự bung
+match = -100.0%%
+title = Màn chụp tự bung cho bé ⚡LOẠI 1⚡ Mùng chụp ngủ tự ...
+url = https://shopee.vn/Màn-chụp-tự-bung-cho-bé-⚡LOẠI-1⚡-Mùng-chụp-ngủ-tự-bung-xếp-chống-muỗi-cho-bé-nhỏ-lớn-trẻ-em-sơ-sinh-i.236260085.10218972280
 
 [h5.lazada.vn]
 match = -33.3%%
