--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-25 21:30:01
+lastsearch = 2024-07-25 22:25:19
 
 [tuhung.net]
 match = -77.8%%
@@ -54,7 +54,7 @@ url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 [www.diepxuan.com]
 match = -7.7%%
 title = Điệp Xuân Nệm
-url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/?srsltid=AfmBOor9vo222lfHTqEGMKco4jk6BsCcGNImWATStYd64qphdCkblf40
+url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
 
 [m.facebook.com]
 match = -122.2%%
