--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-25 20:42:52
+lastsearch = 2024-07-25 22:13:13
 
 [shopee.vn]
-match = -75.0%%
-title = Thảm lau chân chùi chân chống trượt thấm nước nhà bếp ...
-url = https://shopee.vn/Thảm-lau-chân-chùi-chân-chống-trượt-thấm-nước-nhà-bếp-nhà-tắm-phòng-khách-giẻ-lau-chân-đế-chống-trượt-i.149656288.21351545391
+match = -87.5%%
+title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
+url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -62.5%%
-title = Thảm chân logo hình bàn chân, Thảm chùi chân lông xù ...
-url = https://www.lazada.vn/products/tham-chan-logo-hinh-ban-chan-tham-chui-chan-long-xu-cao-cap-tham-lau-chan-sieu-tham-nuoc-tham-chui-chan-chong-tron-truot-trang-tri-nha-cua-phong-ngu-phong-khach-kich-thuoc-40x60-cm-i1788111707.html?srsltid=AfmBOop9YJx7Mv_pYDqj4b-poveezqIIiotahtKhzFlwAu85cCWgWmLt
+match = -33.3%%
+title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
+url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html?srsltid=AfmBOoonArkONu-EKGgTpz4_LWXcw4_LRbjW6qhJHxJDzCfNFTLxDLeb
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -82,8 +82,8 @@ title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
 url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
 
 [sieuthinguyenkim.com]
-match = -62.5%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+match = -29.2%%
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
