--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-07-25 20:50:24
+lastsearch = 2024-07-25 22:20:50
 
 [www.diepxuan.com]
-match = 41.7%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 37.5%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOoqZ69cklVDpqFwYJalkzGGqiSHJZw59YvDwZGYENtQzVqKZ6oCk
 
 [www.tripadvisor.com]
 match = -112.5%%
