--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-25 18:53:17
+lastsearch = 2024-07-25 22:37:54
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBx3Eqwn&sig=ACfU3U2Lw-8lHrQG5UJk9ZgodMIHHuSKkw&hl=en&sa=X&ved=2ahUKEwj0hvrSkMKHAxWwEkQIHb9ZD10Q6AF6BAgaEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBx5xvul&sig=ACfU3U1hdMUGfDL9V_NV8syAxZSUc4EPFg&hl=en&sa=X&ved=2ahUKEwiZvb7twsKHAxWJFlkFHfDxBf0Q6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -76.2%%
-title = Nem Dubrovnik 2024 confirms a record of partecipants
-url = https://www.formatbiz.it/dettNews.aspx?id=11256
+match = -100.0%%
+title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
+url = https://www.formatbiz.it/dettNews.aspx?id=9944
 
 [yro.slashdot.org]
 match = -114.3%%
