--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-25 15:49:59
+lastsearch = 2024-07-25 22:31:41
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Nem Nướng
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -77.8%%
+title = NEM Fashion - NEM Fashion added a new photo.
+url = https://www.facebook.com/photo.php?fbid=744602131035820&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
 match = -105.6%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -116.7%%
-title = NEM Fashion - NEM Fashion updated their cover photo.
-url = https://m.facebook.com/photo/?fbid=815333730629326&set=a.651941763635191
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [emartmall.com.vn]
 match = 0.0%%
