--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-25 21:50:02
+lastsearch = 2024-07-25 22:43:27
 
 [gobearcats.com]
 match = -142.1%%
@@ -227,9 +227,9 @@ title = Alexandre Chan
 url = https://profiles.icts.uci.edu/alexandre.chan
 
 [www.west-cs.com]
-match = -94.7%%
-title = KS 98-1 Multifunction-unit operating manual
-url = https://www.west-cs.com/assets/Manuals/KS-98-1-Manual.pdf
+match = -110.5%%
+title = KS 98-1 Multi-function unit Engineering manual
+url = https://www.west-cs.com/assets/Manuals/KS-98-ManualFull_9499-040-82711.pdf
 
 [floridacollege.edu]
 match = 0.0%%
@@ -550,4 +550,9 @@ url = https://pubs.acs.org/doi/10.1021/acs.chemrev.2c00546
 match = 0.0%%
 title = 
 url = https://edsource.org/updates/nine-california-high-school-seniors-named-u-s-presidential-scholars
+
+[www.apssonline.org]
+match = -30.8%%
+title = APOA Congress
+url = https://www.apssonline.org/apoa-congress.php
 
