--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-25 21:34:57
+lastsearch = 2024-07-25 23:27:53
 
 [everon.online]
 match = 19.2%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -61.5%%
 title = Cách giặt ruột gối Everon bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOookMGcSf9CbWIzQA0g7Ecsyrxqe9vaIU3XJL2cCdjiB1Xz9Zhn3
 
 [www.youtube.com]
 match = -69.2%%
