--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-25 20:52:52
+lastsearch = 2024-07-25 23:30:42
 
 [www.riotgames.com]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://www.youtube.com/watch?v=VnDxsqL5AuE
 [www.diepxuan.com]
 match = 60.0%%
 title = Điệp Xuân Ruột nệm Korea 140x190x09
-url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
+url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html?srsltid=AfmBOoqKHgqtcWxLo33hmN_ginLbbbVeotptgBLyg4daajOf3mQD-NQn
 
 [www.ciee.org]
 match = 0.0%%
