--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-07-25 22:59:44
+lastsearch = 2024-07-25 23:24:02
 
 [www.khanbongcaocap.com.vn]
 match = -78.9%%
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -94.7%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-chan-khach-san/
+url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOoqJM5y6NIBuyAWo_TK3joc1TE0mGFQSfyA-k8gd3CP8BEWC0g0k
 
 [falcon.com.vn]
 match = -105.3%%
