--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-07-25 17:16:16
+lastsearch = 2024-07-25 23:35:56
 
 [dreamland.vn]
 match = 7.5%%
@@ -19,17 +19,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 31.6%%
 title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOop5bTZySPJMI9wyGfzhlqjFItFtmAuSP0icbmzz1tSldpHZ6cid
 
 [www.facebook.com]
 match = -8.0%%
 title = Chăn Ga Gối Đệm Dreamland
-url = https://www.facebook.com/changagoidemdreamland/
+url = https://www.facebook.com/Dreamland.com.vn/
 
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html?srsltid=AfmBOopPiD5SXXqbgWwrvNhP2c_ZcxhStsh1wOfn77ERVG8r9xPUTIcr
 
 [demdreamland.vn]
 match = 31.0%%
