--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-25 22:50:42
+lastsearch = 2024-07-25 23:43:41
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -270,4 +270,14 @@ url = https://thanhtra.gov.vn/en_US/web/guest/xem-chi-tiet-tin-tuc?p_p_id=dschut
 match = -35.7%%
 title = Con Rơi Cựu TĐ Cali Đã 14 Tuổi, Sống Với Mẹ Ở Bakerfield
 url = https://vietbao.com/p122a171845/3/con-roi-cuu-td-cali-da-14-tuoi-song-voi-me-o-bakerfield
+
+[locninhrubber.vn]
+match = -28.6%%
+title = QUY DINH VE BOAT DONG QUAN LY QUY TRINH CHAM ...
+url = https://locninhrubber.vn/images/2023/quy_nh_v_ho_t_ng_qu_n_l_quy_nh_tr_nh_ch_m_s_c_thu_ho_ch_m_cao_su_1.pdf
+
+[ct.qdnd.vn]
+match = 3.6%%
+title = Euro 2024: Truyện cổ tích mùa hè
+url = https://ct.qdnd.vn/the-thao/euro-2024-truyen-co-tich-mua-he-531206
 
