--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-25 20:59:51
+lastsearch = 2024-07-25 23:38:23
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -132,9 +132,9 @@ title = The Bodog Group|Nơi Cá Cược Casino Hàng Đầu Châu Á
 url = https://hawater.com.vn/bmw769346.xhtm
 
 [vietnamese.alibaba.com]
-match = -146.7%%
-title = Chiều Cao HT-M15-5 Công Tắc Phao Thủy Ngân Thu Nhỏ
-url = https://vietnamese.alibaba.com/product-detail/HEIGHT--HT--M15--5--miniature--mercury-60738165796.html
+match = -153.3%%
+title = Chiều Cao HT-M15-3 220V Nhựa Bể Nước Chuyển Đổi ...
+url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-3-220v-Plastic-60724422925.html
 
 [congnghehoangtien.com]
 match = -160.0%%
