--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-25 22:38:56
+lastsearch = 2024-07-25 23:52:48
 
 [shopee.vn]
 match = -21.4%%
@@ -27,9 +27,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
