--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-25 20:45:33
+lastsearch = 2024-07-25 23:40:09
 
 [chieutrucsaigon.com]
-match = 33.3%%
-title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 12
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-viet-nam-quan-12-104.html
+match = 16.7%%
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -8.3%%
+title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
 match = -66.7%%
@@ -27,14 +27,14 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 8.3%%
-title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
