--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-25 23:01:09
+lastsearch = 2024-07-25 23:45:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -76.2%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -127,9 +127,9 @@ title = Việt Nam ứng cử vào vị trí Thẩm phán Toà án Quốc tế v
 url = https://plo.vn/viet-nam-ung-cu-vao-vi-tri-tham-phan-toa-an-quoc-te-ve-luat-bien-post795699.html
 
 [www.qdnd.vn]
-match = -81.0%%
-title = Thanh Hóa: Chủ động ứng phó bão số 2 và mưa lũ
-url = https://www.qdnd.vn/xa-hoi/tin-tuc/thanh-hoa-chu-dong-ung-pho-bao-so-2-va-mua-lu-786386
+match = -57.1%%
+title = Yên Bái: 17 hộ dân bị cô lập do mưa lớn
+url = https://www.qdnd.vn/xa-hoi/tin-tuc/yen-bai-17-ho-dan-bi-co-lap-do-mua-lon-786050
 
 [baogialai.com.vn]
 match = -114.3%%
@@ -357,9 +357,9 @@ title = Từng bước hình thành văn hóa giao thông
 url = https://baobacninh.vn/tung-buoc-hinh-thanh-van-hoa-giao-thong-89980.html
 
 [www.vietnamplus.vn]
-match = -133.3%%
-title = Bình Định: Cháy lớn tại xưởng gỗ, ngọn lửa lan ra rừng keo
-url = https://www.vietnamplus.vn/binh-dinh-chay-lon-tai-xuong-go-ngon-lua-lan-ra-rung-keo-post962212.vnp
+match = -138.1%%
+title = Thái Bình: Cháy xưởng sản xuất bật lửa gas, 12 công nhân ...
+url = https://www.vietnamplus.vn/thai-binh-chay-xuong-san-xuat-bat-lua-gas-12-cong-nhan-nhap-vien-cap-cuu-post966772.vnp
 
 [cadn.com.vn]
 match = -114.3%%
@@ -412,9 +412,9 @@ title = Khai trương trụ sở mới Phòng giao dịch Ea Kar của ...
 url = https://baodaklak.vn/kinh-te/tai-chinh-ngan-hang/202407/khai-truong-tru-so-moi-phong-giao-dich-ea-kar-cua-vietcombank-dak-lak-63215db/
 
 [www.facebook.com]
-match = -42.9%%
-title = SĂN DEAL TANJURO... - Hơi Thở Mặt Trời
-url = https://www.facebook.com/story.php?story_fbid=122155134374126177&id=61553785312238&post_id=61553785312238_122155134374126177
+match = -95.2%%
+title = Đài Phát Thanh. - Ủy viên Bộ Chính trị, Thường ...
+url = https://www.facebook.com/100044471918044/photos/1055354175956970/
 
 [haiquanonline.com.vn]
 match = -133.3%%
