--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-25 21:55:09
+lastsearch = 2024-07-25 23:49:38
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -44.0%%
-title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+match = 5.3%%
+title = Mua ruột gối ở đâu?
+url = https://demxanh.com/mua-ruot-goi-o-dau.html
 
 [khodem.vn]
 match = 24.0%%
@@ -125,4 +125,9 @@ url = https://thegioidemdep.com/goi-cao-su-non-ventry-thai-lan/
 match = -32.0%%
 title = Full text of "CU Amiga Issue 041 Jul 93"
 url = https://archive.org/stream/CUAmigaIssue041Jul93/CU_Amiga_Issue_041_Jul_93_djvu.txt
+
+[everonhanoi.com.vn]
+match = 70.0%%
+title = Ruột gối Everon mỏng
+url = https://everonhanoi.com.vn/ruot-goi-mong-everon-10
 
