--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-25 22:43:27
+lastsearch = 2024-07-25 23:42:39
 
 [gobearcats.com]
 match = -142.1%%
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -178.9%%
-title = Identification of 12 new susceptibility loci for different ...
-url = https://pubmed.ncbi.nlm.nih.gov/28346442/
+match = -142.1%%
+title = Upper Limits on the Stochastic Gravitational-Wave ...
+url = https://pubmed.ncbi.nlm.nih.gov/28388180/
 
 [www.sjsu.edu]
 match = -105.3%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
