CI images update

--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-25 20:29:54
+lastsearch = 2024-07-26 00:01:04
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -225.0%%
-title = Khu vực Trung Bộ, chiều tối có mưa rải rác và ban ngày trời ...
-url = https://www.youtube.com/watch?v=cuMsrlsOkVg
+match = -243.8%%
+title = Dự báo thời tiết hôm nay và ngày mai 14/5 | Dự báo thời tiết ...
+url = https://www.youtube.com/watch?v=xqd5G5akECU
 
 [vietbis.vn]
 match = -193.8%%
@@ -430,4 +430,9 @@ url = http://www.chieulongdinh.com.vn/vi/san-pham/20/chieu-coi-soc-thang-1m4-x-2
 match = -168.8%%
 title = Mạng lưới 14 tuyến đường sắt đô thị phủ khắp Hà Nội
 url = https://hanoionline.vn/mang-luoi-14-tuyen-duong-sat-do-thi-phu-khap-ha-noi-233653.htm
+
+[thaibinhjmp.vn]
+match = -268.8%%
+title = Bài 14: Đánh giá kết quả điều trị lệch lạc khớp cắn loại II sử dụng ...
+url = https://thaibinhjmp.vn/index.php/ojstbump/article/view/186?articlesBySameAuthorPage=11
 
