--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-25 22:41:21
+lastsearch = 2024-07-25 23:53:06
 
 [bellizeno.com]
 match = -14.3%%
@@ -67,9 +67,9 @@ title = Gối tựa Đệm Xanh giá rẻ tại Hà Nội
 url = https://demxanh.com/goi-tua-dem-xanh.html
 
 [www.lazada.vn]
-match = -13.3%%
-title = Vỏ Đa Dạng Hình Ảnh Vải Bố Xịn Sò - Adu79
-url = https://www.lazada.vn/products/goi-tua-lung-ruot-goi-vuong-ruot-goi-tua-lung-sofa-vo-da-dang-hinh-anh-vai-bo-xin-so-adu79-i2240763955.html
+match = 26.7%%
+title = Vỏ Gối Vuông 60x60 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/?page=39
 
 [www.fortheloveofport.com]
 match = -13.0%%
@@ -130,4 +130,9 @@ url = https://godello.ca/tag/nerello-cappuccio/
 match = -36.7%%
 title = Userpage of PrismaDream -- Fur Affinity [dot] net
 url = https://www.furaffinity.net/user/prismadream/
+
+[www.reader.com.vn]
+match = -20.0%%
+title = Top 3 loại ruột gối vuông tựa lưng giá rẻ tốt nhất 2021
+url = https://www.reader.com.vn/ruot-goi-vuong-tua-lung-a591.html
 
