--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -163,8 +163,8 @@ url = https://leetgaming.com/2024/06/12/lol-league-of-legends-faker-skincsomag-a
 
 [www.thespike.gg]
 match = -80.0%%
-title = FENNEL Hotelava - VALORANT Game Changers 2024
-url = https://www.thespike.gg/br/match/fennel-hotelava-reignite-lily/120396
+title = Dplus vs Nongshim RedForce | VCL - Korea Split 2
+url = https://www.thespike.gg/br/match/dplus-nongshim-redforce/120063
 
 [sensiblepsych.my-free.website]
 match = -155.0%%
