--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-25 15:33:15
+lastsearch = 2024-07-25 23:51:41
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
 match = -162.5%%
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = 0.0%%
-title = posts-vi-84.xml
-url = https://www.vinmec.com/sitemap/posts-vi-84.xml
+match = -37.5%%
+title = Tác dụng của mai rùa với sức khỏe
+url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-mai-rua-voi-suc-khoe-vi/
 
 [www.youtube.com]
 match = -131.2%%
@@ -240,4 +240,9 @@ url = https://www.facebook.com/groups/NguoiVietHouston/
 match = -43.8%%
 title = Editors | Scientific Reports
 url = https://www.nature.com/srep/about/editors
+
+[www.petmart.vn]
+match = -137.5%%
+title = Tìm hiểu sự biến đổi màu sắc trên lưng mai Rùa cảnh
+url = https://www.petmart.vn/tim-hieu-su-bien-doi-mau-sac-tren-lung-mai-rua-canh
 
