--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-25 21:15:24
+lastsearch = 2024-07-25 23:54:32
 
 [shopee.vn]
-match = -41.7%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = -45.8%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoo6doWG7qwbRJ0sLpqZ59iYYtedotj6QClx_-o0SlVbKXeobNOs
 
 [goni.vn]
 match = 4.2%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 [foreverbedding.net]
 match = -20.8%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOorq6Tkfq8tBu_BxvWkKoGWKW9QeC6dCxUcfZ2k8EebYuQfJh0J4
 
 [joliefam.vn]
 match = -37.5%%
@@ -155,4 +155,9 @@ url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 match = -16.7%%
 title = Chiếu điều hòa giá rẻ nhất Hà Nội - chăn ga gối
 url = https://entershopping.vn/chieu-truc/Chieu-dieu-hoa.html
+
+[fptshop.com.vn]
+match = -45.8%%
+title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
+url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105?srsltid=AfmBOop-42EaFzVrtNCapl35VEk0YMHVQW0dnlINEMyZ6AXFUAc46XY8
 
