--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-25 23:20:52
+lastsearch = 2024-07-25 23:52:02
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -292,9 +292,9 @@ title = Laserfiche WebLink - IIS Windows Server - South Miami, FL
 url = http://e-docs.southmiamifl.gov/WebLink/DocView.aspx?id=2445&undefined
 
 [www.legis.iowa.gov]
-match = -38.1%%
-title = UNASSIGNED STANDINGS - Iowa Legislature
-url = https://www.legis.iowa.gov/docs/publications/SCGR/1444380.pdf
+match = 0.0%%
+title = acts and resolutions
+url = https://www.legis.iowa.gov/docs/publications/iactc/20.1/1884_Iowa_Acts.pdf
 
 [www2.irwindaleca.gov]
 match = -11.1%%
@@ -330,4 +330,9 @@ url = https://ntrs.nasa.gov/api/citations/19800020296/downloads/19800020296.pdf
 match = -81.8%%
 title = f(;SJ C/Jiv
 url = https://www.epa.gov/sites/default/files/2014-03/documents/regulatory_review_38.pdf
+
+[dpw.lacounty.gov]
+match = -109.5%%
+title = ARCADIA CERTIFICATES (Parcel Maps) CITY TREASURER ...
+url = http://dpw.lacounty.gov/ldd/lib/pdf/SMAM/GUIDE FOR THE PREPARATION OF FINAL & PARCEL MAPS (rev2 - 11 19 13).pdf
 
