--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-25 23:28:58
+lastsearch = 2024-07-25 23:52:24
 
 [demtot.com]
-match = 23.8%%
-title = Đệm lò xo cối trụ Adaptive
-url = https://demtot.com/dem-lo-xo-coi-tru-adapive/
+match = 45.0%%
+title = Đệm lò xo Dunlopillo
+url = https://demtot.com/dem-lo-xo-dunlopillo/
 
 [tuananh.vn]
 match = 52.4%%
