--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-25 15:29:00
+lastsearch = 2024-07-25 23:49:57
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -60.9%%
+title = SOLANA PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/solana
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -400,4 +400,9 @@ url = https://worldpopulationreview.com/country-rankings/age-of-consent-by-count
 match = -143.5%%
 title = Nov 19, 1952, p. 1 - Indiana Evening Gazette Newspaper Archives
 url = https://indianagazette.newspaperarchive.com/indiana-evening-gazette/1952-11-19/
+
+[www.gn.go.kr]
+match = 0.0%%
+title = 
+url = https://www.gn.go.kr/entour/sub05_04_08.do
 
