--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-25 22:17:45
+lastsearch = 2024-07-25 23:47:03
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -166.7%%
+title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
+url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
 
 [ghedatruongan.com]
 match = -80.0%%
