--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-25 20:34:57
+lastsearch = 2024-07-25 23:57:38
 
 [www.diepxuan.com]
-match = -131.2%%
-title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOorU1LhTXkw_No8GXIqKI-iLJcMk4h8JHuUs0z428OOOLXBqHOt_
+match = -125.0%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
 match = -181.2%%
 title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html?srsltid=AfmBOooXG6kKmbjlS3mwY6cEcAA27mojjNdmW1V6nE3NQhq0jt-Z6-lr
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [m.facebook.com]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = 2. 1. they made the fire in the traditional way 2. you must ...
 url = https://olm.vn/hoi-dap/tim-kiem?id=253432938837&q=2.+1.+they+made+the+fire+in+the+traditional+way+2.+you+must+collect+four+bottles+of+water+3.+Irving+Berlin+wrote+the+famous+song+"+While+Christmas"+4.+how+do+people+cook+this+kind+of+food?+5.+th...
 
 [shopee.vn]
-match = -212.5%%
-title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
-url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
+match = -206.2%%
+title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
+url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
 
 [metric.vn]
 match = -206.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = 0.0%%
-title = Chongyun X Aether
-url = https://www.tiktok.com/discover/chongyun-x-aether
+match = -193.8%%
+title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
+url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
 
 [archiveofourown.org]
 match = -137.5%%
