--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -182,9 +182,9 @@ title = 2024 Fall Quarter/ Fall Semester Academic Calendar (All ...
 url = https://search.uconline.edu/docs/academic-calendar.pdf
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.4%%
+title = Lien Claimants
+url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -142.1%%
